--- a/config/database.yml
+++ b/config/database.yml
@@ -6,37 +6,17 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
+  encoding: unicode
   database: verivore_development
   pool: 5
-  username: root
+  username: ComScan
   password:
-  socket: /tmp/mysql.sock
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test: &test
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+test:
+  adapter: postgresql
+  encoding: unicode
   database: verivore_test
   pool: 5
-  username: root
+  username: ComScan
   password:
-  socket: /tmp/mysql.sock
-
-production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: verivore_production
-  pool: 5
-  username: jonnyjohannes
-  password: b00mp0w
-  socket: /tmp/mysql.sock
-
-cucumber:
-  <<: *test
